# orchestra

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  README_CN.md  RELEASE_PLAN.md  audio.lua  cli.py  config.lua  dispatcher.lua  file_manager.lua  json_manager.lua  logger.lua  mcp_bridge.py  midi.lua  orchestra_loader.lua  orchestra_main.lua  orchestra_stop.lua  project.lua  pyproject.toml  server.py  test_runner.lua  track.lua
.claude/: settings.local.json
docs/: edit-music.md  existing-music-ai-products.md  general_midi_program.md  music-model-abilities.md  music-models.md  reaper-api-functions.md  reaper-track-api.md  track.md
mcp_tools/: audio.py  item.py  marker.py  midi.py  project.py  take.py  track.py
reaper_scripts/: audio.lua  dispatcher.lua  item.lua  logger.lua  marker.lua  midi.lua  orchestra_loader.lua  orchestra_main.lua  project.lua  take.lua  test_runner.lua  time_map.lua  track.lua  verify_load.lua
tasks/: task001.md  task002.md  task003-introduce-mcp.md  task004-lua-all-track-operation.md  task005-mcp-track-operations.md  task006-design-media-api.md  task007-impl-audio-api.md  task008-test-audio-api.md  task009-impl-and-test-audio-mcp.md  task010-impl-midi-api.md  task011-impl-midi-mcp.md  task014-look-for-lyrics-melody-model.md  task016-look-for-lyrics2audio-models.md  task018-look-for-accompaniment-by-audio.md  task020-design-mcp-architect.md  task021-pack-bs-rofomer-mcp.md  task023-pack-some-as-mcp.md  task028-run-full-process-with-mcp-skill.md  task029-track-set-parent-as.md  task033-test-takes-items.md  tasks.md  (+2 more)
(+88 files in other folders)
